[package]
name = "raytrace"
version = "0.1.0"
authors = ["Carlo Teubner <carlo@cteubner.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
rayon = "1.3"
serde = "1.0"
serde-hjson = "0.9"
smallvec = "1.4"
